--- a/map_with_button.html
+++ b/map_with_button.html
@@ -42,28 +42,34 @@
   <script>
     mapboxgl.accessToken = 'pk.eyJ1IjoiMjBhaG9lcyIsImEiOiJjbWFwazQxbDgwaXMzMmxwbzJmNmhidm0yIn0.NileAvzC_m2asZI3tLIqUw';
 
-    const defaultCenter    = [-71.245, 42.254],
-          defaultZoom      = 8,
-          vectorLayerId    = 'municipalitiesbycommunitytype-c8ks3h copy',
-          tileField        = 'Municipali',
-          geojsonField     = 'Municipality',
-          bounds           = [[-72.5,41.5],[-69.5,43.0]],
-          geojsonURL       = './MunicipalitiesByCommunityType.geojson';
+    const defaultCenter = [-71.245, 42.254],
+          defaultZoom   = 8,
+          vectorLayerId = 'municipalitiesbycommunitytype-c8ks3h copy',
+          tileField     = 'Municipali',
+          geojsonField  = 'Municipality',
+          bounds        = [[-72.5,41.5],[-69.5,43.0]],
+          geojsonURL    = './MunicipalitiesByCommunityType.geojson';
 
-    let municipalitiesData = [], initialCamera;
+    let municipalitiesData = [],
+        initialCamera;   // will store our exact starting view
 
-    // initialize map
+    // initialize the map
     const map = new mapboxgl.Map({
       container: 'map',
       style: 'mapbox://styles/20ahoes/cmb6rnzqp00rs01sddsqq9xtx',
       center: defaultCenter,
-      zoom: defaultZoom,
+      zoom:   defaultZoom,
       minZoom: defaultZoom,
       maxZoom: 22,
       maxBounds: bounds
     });
 
-    // once loaded, save exact initial camera and set up layers
+    // whenever the iframe viewport size changes, recalculate map size
+    window.addEventListener('resize', () => {
+      if (map) map.resize();
+    });
+
+    // once the style is loaded, capture our exact initial camera & set up layers
     map.on('load', () => {
       initialCamera = {
         center:  map.getCenter().toArray(),
@@ -72,43 +78,34 @@
         pitch:   map.getPitch()
       };
 
-      // load GeoJSON
       fetch(geojsonURL)
         .then(r => r.ok ? r.json() : Promise.reject(r.status))
         .then(data => municipalitiesData = data.features)
         .catch(err => console.error('GeoJSON load failed:', err));
 
-      // faded base layer
-      map.addSource('municipalities-full', { type: 'geojson', data: geojsonURL });
+      map.addSource('municipalities-full', { type:'geojson', data:geojsonURL });
       map.addLayer({
-        id: 'fade-layer',
-        type: 'fill',
-        source: 'municipalities-full',
-        paint: { 'fill-color': '#888', 'fill-opacity': 0.5 },
+        id: 'fade-layer', type: 'fill', source: 'municipalities-full',
+        paint: {'fill-color':'#888','fill-opacity':0.5},
         layout: { visibility: 'none' }
       });
 
-      // highlight layer
       map.addSource('highlight-town', {
         type: 'geojson',
-        data: { type: 'FeatureCollection', features: [] }
+        data: { type:'FeatureCollection', features:[] }
       });
       map.addLayer({
-        id: 'highlight-fill',
-        type: 'fill',
-        source: 'highlight-town',
-        paint: { 'fill-color': '#FFEB3B', 'fill-opacity': 0.8 }
+        id:'highlight-fill', type:'fill', source:'highlight-town',
+        paint:{'fill-color':'#FFEB3B','fill-opacity':0.8}
       });
       map.addLayer({
-        id: 'highlight-line',
-        type: 'line',
-        source: 'highlight-town',
-        paint: { 'line-color': '#FF9800', 'line-width': 2 }
+        id:'highlight-line', type:'line', source:'highlight-town',
+        paint:{'line-color':'#FF9800','line-width':2}
       });
 
       document.getElementById('homeButton').onclick = clearSelection;
 
-      // click-to-select
+      // click‐to‐select
       map.on('click', vectorLayerId, e => {
         if (!municipalitiesData.length) return;
         const name = e.features[0].properties[tileField];
@@ -119,7 +116,7 @@
       });
     });
 
-    // zoom in
+    // helper to fly to a feature
     function selectFeature(feature) {
       const coords = feature.geometry.type === 'MultiPolygon'
         ? feature.geometry.coordinates.flat(2)
@@ -129,45 +126,44 @@
         new mapboxgl.LngLatBounds()
       );
 
-      map.fitBounds(bb, { padding: 40, duration: 1000 });
+      map.fitBounds(bb, { padding:40, duration:500 });
       map.setFilter('fade-layer',
-        ['!=', ['get', geojsonField], feature.properties[geojsonField]]
+        ['!=',['get',geojsonField],feature.properties[geojsonField]]
       );
-      map.setLayoutProperty('fade-layer', 'visibility', 'visible');
+      map.setLayoutProperty('fade-layer','visibility','visible');
       map.getSource('highlight-town').setData({
-        type: 'FeatureCollection',
-        features: [feature]
+        type:'FeatureCollection', features:[feature]
       });
 
       window.parent.postMessage({
-        type: 'town-selected',
+        type:'town-selected',
         properties: feature.properties
       }, '*');
     }
 
-    // clear & return to exactly initial camera
+    // return to **exact** initial view
     function clearSelection() {
       map.setLayoutProperty('fade-layer', 'visibility', 'none');
       map.getSource('highlight-town').setData({
-        type: 'FeatureCollection',
-        features: []
+        type:'FeatureCollection', features:[]
       });
 
-      // recalc dimensions now that panel is gone…
+      // recalc size right away
       map.resize();
 
+      // then ease back to the saved camera
       map.easeTo({
         center:  initialCamera.center,
         zoom:    initialCamera.zoom,
         bearing: initialCamera.bearing,
         pitch:   initialCamera.pitch,
-        duration: 1000
+        duration: 500
       });
 
-      window.parent.postMessage({ type: 'clear-complete' }, '*');
+      window.parent.postMessage({ type:'clear-complete' }, '*');
     }
 
-    // respond to search or clear requests
+    // listen for search / clear messages from the parent
     window.addEventListener('message', e => {
       const msg = e.data;
       if (!municipalitiesData.length) return;
