--- a/search.html
+++ b/search.html
@@ -250,7 +250,7 @@
       </div>
       <iframe
         id="mapFrame"
-        src="map_with_button.html?ver=1.1"
+        src="map_with_button.html?cachebust=8"
         title="Map View">
       </iframe>
     </div>
