--- a/map_with_button.html
+++ b/map_with_button.html
@@ -1,3 +1,4 @@
+<!-- map_with_button.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,45 +15,36 @@
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet"/>
 
   <style>
-    html, body {
-      margin: 0; padding: 0; height: 100%;
-      font-family: 'Roboto', sans-serif;
-    }
-    #map {
-      position: absolute; top: 0; bottom: 0; left: 0; right: 0;
-    }
+    html, body { margin: 0; padding: 0; height: 100%; font-family: 'Roboto',sans-serif; }
+    #map { position:absolute; top:0; bottom:0; left:0; right:0; }
     #homeButton {
-      position: absolute; top: 10px; left: 10px; z-index: 2;
-      padding: 10px 20px; font-size: 16px; font-weight: 700;
-      background: rgba(255,255,255,0.9); color: #005e95;
-      border: none; border-radius: 8px; cursor: pointer;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-      backdrop-filter: blur(4px);
+      position:absolute; top:10px; left:10px; z-index:2;
+      padding:10px 20px; font-size:16px; font-weight:700;
+      background:rgba(255,255,255,0.9); color:#005e95;
+      border:none; border-radius:8px; cursor:pointer;
+      box-shadow:0 2px 6px rgba(0,0,0,0.3); backdrop-filter:blur(4px);
     }
-    .material-icons { font-size: 24px; }
+    .material-icons { font-size:24px; }
   </style>
 </head>
 <body>
-
   <button id="homeButton" title="Clear & Home">
     <span class="material-icons">home</span>
   </button>
   <div id="map"></div>
 
   <script>
-    mapboxgl.accessToken = 'pk.eyJ1IjoiMjBhaG9lcyIsImEiOiJjbWFwazQxbDgwaXMzMmxwbzJmNmhidm0yIn0.NileAvzC_m2asZI3tLIqUw';
+    mapboxgl.accessToken = 'pk.eyJ1IjoiMjBhaG9lciIsImEiOiJjbWFwazQxbDgwaXMzMmxwbzJmNmhidm0yIn0.NileAvzC_m2asZI3tLIqUw';
 
     const defaultCenter = [-71.245, 42.254],
-          defaultZoom   = 7.6,               // lowered from 7.5
+          defaultZoom   = 7.6,
           vectorLayerId = 'municipalitiesbycommunitytype-c8ks3h copy',
-          tileField     = 'Municipali',
-          geojsonField  = 'Municipality',
+          surveyLayerA  = 'townsurvey-shp-7bmdt',
+          surveyLayerB  = 'townsurvey-shp-7bmdt copy',
           geojsonURL    = './MunicipalitiesByCommunityType.geojson';
 
-    let municipalitiesData = [],
-        initialCamera;
+    let municipalitiesData = [], initialCamera;
 
-    // initialize map with no maxBounds but minZoom = defaultZoom
     const map = new mapboxgl.Map({
       container: 'map',
       style: 'mapbox://styles/20ahoes/cmb6rnzqp00rs01sddsqq9xtx',
@@ -62,13 +54,10 @@
       maxZoom: 22
     });
 
-    // handle iframe/container resizes
-    window.addEventListener('resize', () => {
-      if (map) map.resize();
-    });
+    window.addEventListener('resize', () => map.resize());
 
     map.on('load', () => {
-      // capture exact initial camera
+      // 1) Capture exact initial camera
       initialCamera = {
         center:  map.getCenter().toArray(),
         zoom:    map.getZoom(),
@@ -76,24 +65,24 @@
         pitch:   map.getPitch()
       };
 
-      // load your GeoJSON
+      // 2) Load your GeoJSON into an array
       fetch(geojsonURL)
         .then(r => r.ok ? r.json() : Promise.reject(r.status))
         .then(data => municipalitiesData = data.features)
         .catch(err => console.error('GeoJSON load failed:', err));
 
-      // faded base layer
+      // 3) Add the faded base layer
       map.addSource('municipalities-full', { type:'geojson', data:geojsonURL });
       map.addLayer({
-        id: 'fade-layer', type: 'fill', source: 'municipalities-full',
-        paint: {'fill-color':'#888','fill-opacity':0.5},
-        layout: { visibility: 'none' }
+        id: 'fade-layer', type:'fill', source:'municipalities-full',
+        paint:{'fill-color':'#888','fill-opacity':0.5},
+        layout:{ visibility:'none' }
       });
 
-      // highlight layer
+      // 4) Add the highlight layer
       map.addSource('highlight-town', {
-        type: 'geojson',
-        data: { type:'FeatureCollection', features:[] }
+        type:'geojson',
+        data:{ type:'FeatureCollection', features:[] }
       });
       map.addLayer({
         id:'highlight-fill', type:'fill', source:'highlight-town',
@@ -104,55 +93,57 @@
         paint:{'line-color':'#FF9800','line-width':2}
       });
 
-      // Home button
+      // 5) Override the style’s built-in “min zoom = 8” on all three layers
+      [ vectorLayerId, surveyLayerA, surveyLayerB ].forEach(layerId => {
+        if (map.getLayer(layerId)) {
+          map.setLayerZoomRange(layerId, defaultZoom, 22);
+        }
+      });
+
+      // 6) Wire up your home button
       document.getElementById('homeButton').onclick = clearSelection;
 
-      // click-to-select
+      // 7) Click-to-select
       map.on('click', vectorLayerId, e => {
         if (!municipalitiesData.length) return;
-        const name = e.features[0].properties[tileField];
-        const match = municipalitiesData.find(f =>
-          f.properties[geojsonField]?.toLowerCase() === name.toLowerCase()
+        const clicked = e.features[0].properties.Municipali.toLowerCase();
+        const match   = municipalitiesData.find(f =>
+          f.properties.Municipality.toLowerCase() === clicked
         );
         if (match) selectFeature(match);
       });
     });
 
-    // zoom-in (1000ms)
+    // Zoom into a feature with a 1 s animation
     function selectFeature(feature) {
       const coords = feature.geometry.type==='MultiPolygon'
         ? feature.geometry.coordinates.flat(2)
         : feature.geometry.coordinates[0];
       const bb = coords.reduce(
-        (b, c) => b.extend(c),
+        (b,c) => b.extend(c),
         new mapboxgl.LngLatBounds()
       );
-
       map.fitBounds(bb, { padding:40, duration:1000 });
       map.setFilter('fade-layer',
-        ['!=',['get',geojsonField],feature.properties[geojsonField]]
+        ['!=',['get','Municipality'],feature.properties.Municipality]
       );
       map.setLayoutProperty('fade-layer','visibility','visible');
       map.getSource('highlight-town').setData({
         type:'FeatureCollection', features:[feature]
       });
-
       window.parent.postMessage({
         type:'town-selected',
         properties: feature.properties
       }, '*');
     }
 
-    // zoom-out back to initial camera (1000ms)
+    // Zoom back out to the exact initial camera over 1 s
     function clearSelection() {
-      map.setLayoutProperty('fade-layer', 'visibility', 'none');
+      map.setLayoutProperty('fade-layer','visibility','none');
       map.getSource('highlight-town').setData({
         type:'FeatureCollection', features:[]
       });
-
-      // recalc container size
       map.resize();
-
       map.easeTo({
         center:  initialCamera.center,
         zoom:    initialCamera.zoom,
@@ -160,18 +151,17 @@
         pitch:   initialCamera.pitch,
         duration: 1000
       });
-
       window.parent.postMessage({ type:'clear-complete' }, '*');
     }
 
-    // listen for search/clear from parent
+    // Listen for search/cancel from the parent
     window.addEventListener('message', e => {
       const msg = e.data;
       if (!municipalitiesData.length) return;
       if (msg?.type === 'search-town') {
         const term = msg.name.trim().toLowerCase();
         const match = municipalitiesData.find(f =>
-          f.properties[geojsonField]?.toLowerCase() === term
+          f.properties.Municipality.toLowerCase() === term
         );
         if (match) selectFeature(match);
       }
