--- a/map_with_button.html
+++ b/map_with_button.html
@@ -35,4 +35,156 @@
 </head>
 <body>
 
-  <button id="homeButton" title="Clear &
+  <button id="homeButton" title="Clear & Home">
+    <span class="material-icons">home</span>
+  </button>
+  <div id="map"></div>
+
+  <script>
+    mapboxgl.accessToken = 'pk.eyJ1IjoiMjBhaG9lcyIsImEiOiJjbWFwazQxbDgwaXMzMmxwbzJmNmhidm0yIn0.NileAvzC_m2asZI3tLIqUw';
+
+    const defaultCenter    = [-71.245, 42.254],
+          defaultZoom      = 7.6,    // updated from 7.0
+          vectorLayerId    = 'municipalitiesbycommunitytype-c8ks3h copy',
+          tileField        = 'Municipali',
+          geojsonField     = 'Municipality',
+          geojsonURL       = './MunicipalitiesByCommunityType.geojson';
+
+    let municipalitiesData = [],
+        initialCamera;
+
+    // initialize map (no maxBounds, minZoom = defaultZoom)
+    const map = new mapboxgl.Map({
+      container: 'map',
+      style: 'mapbox://styles/20ahoes/cmb6rnzqp00rs01sddsqq9xtx',
+      center: defaultCenter,
+      zoom:   defaultZoom,
+      minZoom: defaultZoom,
+      maxZoom: 22
+    });
+
+    // handle iframe/container resizes
+    window.addEventListener('resize', () => map.resize());
+
+    map.on('load', () => {
+      // capture the exact initial camera
+      initialCamera = {
+        center:  map.getCenter().toArray(),
+        zoom:    map.getZoom(),
+        bearing: map.getBearing(),
+        pitch:   map.getPitch()
+      };
+
+      // load your GeoJSON features
+      fetch(geojsonURL)
+        .then(r => r.ok ? r.json() : Promise.reject(r.status))
+        .then(data => municipalitiesData = data.features)
+        .catch(err => console.error('GeoJSON load failed:', err));
+
+      // faded base layer
+      map.addSource('municipalities-full', { type:'geojson', data:geojsonURL });
+      map.addLayer({
+        id: 'fade-layer',
+        type: 'fill',
+        source: 'municipalities-full',
+        paint: { 'fill-color':'#888','fill-opacity':0.5 },
+        layout: { visibility: 'none' }
+      });
+
+      // highlight layer
+      map.addSource('highlight-town', {
+        type: 'geojson',
+        data: { type:'FeatureCollection', features:[] }
+      });
+      map.addLayer({
+        id: 'highlight-fill',
+        type: 'fill',
+        source: 'highlight-town',
+        paint: { 'fill-color':'#FFEB3B','fill-opacity':0.8 }
+      });
+      map.addLayer({
+        id: 'highlight-line',
+        type: 'line',
+        source: 'highlight-town',
+        paint: { 'line-color':'#FF9800','line-width':2 }
+      });
+
+      // wire up Home button
+      document.getElementById('homeButton').onclick = clearSelection;
+
+      // click‐to‐select
+      map.on('click', vectorLayerId, e => {
+        if (!municipalitiesData.length) return;
+        const clicked = e.features[0].properties[tileField].toLowerCase();
+        const match   = municipalitiesData.find(f =>
+          f.properties[geojsonField]?.toLowerCase() === clicked
+        );
+        if (match) selectFeature(match);
+      });
+    });
+
+    // zoom in to a feature (1000 ms)
+    function selectFeature(feature) {
+      const coords = feature.geometry.type === 'MultiPolygon'
+        ? feature.geometry.coordinates.flat(2)
+        : feature.geometry.coordinates[0];
+      const bb = coords.reduce(
+        (b, c) => b.extend(c),
+        new mapboxgl.LngLatBounds()
+      );
+
+      map.fitBounds(bb, { padding:40, duration:1000 });
+      map.setFilter(
+        'fade-layer',
+        ['!=',['get', geojsonField], feature.properties[geojsonField]]
+      );
+      map.setLayoutProperty('fade-layer','visibility','visible');
+      map.getSource('highlight-town').setData({
+        type:'FeatureCollection',
+        features:[feature]
+      });
+
+      window.parent.postMessage({
+        type:'town-selected',
+        properties: feature.properties
+      }, '*');
+    }
+
+    // zoom back out to initial camera (1000 ms)
+    function clearSelection() {
+      map.setLayoutProperty('fade-layer','visibility','none');
+      map.getSource('highlight-town').setData({
+        type:'FeatureCollection',
+        features:[]
+      });
+
+      map.resize();
+      map.easeTo({
+        center:  initialCamera.center,
+        zoom:    initialCamera.zoom,
+        bearing: initialCamera.bearing,
+        pitch:   initialCamera.pitch,
+        duration: 1000
+      });
+
+      window.parent.postMessage({ type:'clear-complete' }, '*');
+    }
+
+    // listen for search/cancel from parent
+    window.addEventListener('message', e => {
+      const msg = e.data;
+      if (!municipalitiesData.length) return;
+      if (msg?.type === 'search-town') {
+        const term = msg.name.trim().toLowerCase();
+        const match = municipalitiesData.find(f =>
+          f.properties[geojsonField]?.toLowerCase() === term
+        );
+        if (match) selectFeature(match);
+      }
+      else if (msg?.type === 'clear-request') {
+        clearSelection();
+      }
+    });
+  </script>
+</body>
+</html>
