--- a/search.html
+++ b/search.html
@@ -112,9 +112,9 @@
       background: none;
       border: none;
       outline: none;
-      font-size: 72px;      /* same size */
+      font-size: 72px;
       line-height: 1;
-      font-weight: normal;   /* thinner weight */
+      font-weight: normal;   /* slightly thinner */
       color: gray;
       cursor: pointer;
     }
@@ -122,7 +122,7 @@
       color: #555;
     }
 
-    /* -------- Map‐side legend -------- */
+    /* -------- Popup‐side legend -------- */
     .legend {
       margin-top: 30px;
       font-size: 0.9em;
@@ -164,6 +164,19 @@
       box-shadow: inset 0 0 0 1px #fff;
       margin-right: 8px;
       flex-shrink: 0;
+    }
+
+    /* -------- Map‐side legend (when panel closed) -------- */
+    #legendMap {
+      position: absolute;
+      bottom: 20px;
+      right: 20px;
+      z-index: 4;
+      font-size: 0.8em;         /* slightly smaller */
+      padding: 6px 8px;         /* reduce padding */
+    }
+    #container.info-open #legendMap {
+      display: none;            /* hide when panel open */
     }
 
     /* -------- Main (search + map) -------- */
@@ -254,7 +267,7 @@
 
   <div id="container">
 
-    <!-- Map‐side legend -->
+    <!-- Map‐side legend (shown when panel closed) -->
     <div id="legendMap" class="legend">
       <h3>MBTA Communities</h3>
       <div class="legend-group">
@@ -284,7 +297,7 @@
           <p><span class="title">Unit Capacity Requirement:</span><span id="unitField"></span></p>
         </div>
 
-        <!-- Panel‐side legend -->
+        <!-- Panel‐side legend (shown in popup) -->
         <div id="legendPanel" class="legend">
           <h3>MBTA Communities</h3>
           <div class="legend-group">
@@ -299,6 +312,7 @@
             <div class="legend-item"><span class="patch" style="background:#9C9C9C"></span>Exempt</div>
           </div>
         </div>
+
       </div>
     </div>
 
@@ -313,7 +327,7 @@
       </div>
       <iframe
         id="mapFrame"
-        src="map_with_button.html?cachebust=19"
+        src="map_with_button.html?cachebust=21"
         title="Map View">
       </iframe>
     </div>
@@ -333,7 +347,7 @@
     // Hide intro overlay
     startBtn.addEventListener('click', () => intro.style.display = 'none');
 
-    // Clear panel & notify map
+    // Collapse panel / notify map to clear
     function clearAll() {
       input.value = '';
       toggleClearIcon();
@@ -341,7 +355,7 @@
       mapFrame.contentWindow.postMessage({ type:'clear-request' }, '*');
     }
 
-    // Run search
+    // Search by town name
     function runSearch() {
       const name = input.value.trim();
       if (!name) return;
@@ -362,6 +376,7 @@
 
     btnClose.addEventListener('click', clearAll);
 
+    // Handle messages from the map iframe
     window.addEventListener('message', e => {
       if (e.source !== mapFrame.contentWindow) return;
       const msg = e.data;
