--- a/search.html
+++ b/search.html
@@ -114,7 +114,7 @@
       outline: none;
       font-size: 72px;
       line-height: 1;
-      font-weight: normal;   /* slightly thinner */
+      font-weight: normal;
       color: gray;
       cursor: pointer;
     }
@@ -170,13 +170,13 @@
     #legendMap {
       position: absolute;
       bottom: 20px;
-      right: 20px;
+      left: 20px;            /* moved to bottom-left */
       z-index: 4;
-      font-size: 0.8em;         /* slightly smaller */
-      padding: 6px 8px;         /* reduce padding */
+      font-size: 0.8em;
+      padding: 6px 8px;
     }
     #container.info-open #legendMap {
-      display: none;            /* hide when panel open */
+      display: none;
     }
 
     /* -------- Main (search + map) -------- */
@@ -327,7 +327,7 @@
       </div>
       <iframe
         id="mapFrame"
-        src="map_with_button.html?cachebust=21"
+        src="map_with_button.html?cachebust=20"
         title="Map View">
       </iframe>
     </div>
@@ -347,7 +347,7 @@
     // Hide intro overlay
     startBtn.addEventListener('click', () => intro.style.display = 'none');
 
-    // Collapse panel / notify map to clear
+    // Collapse panel & notify map
     function clearAll() {
       input.value = '';
       toggleClearIcon();
@@ -355,7 +355,7 @@
       mapFrame.contentWindow.postMessage({ type:'clear-request' }, '*');
     }
 
-    // Search by town name
+    // Run search
     function runSearch() {
       const name = input.value.trim();
       if (!name) return;
@@ -376,7 +376,6 @@
 
     btnClose.addEventListener('click', clearAll);
 
-    // Handle messages from the map iframe
     window.addEventListener('message', e => {
       if (e.source !== mapFrame.contentWindow) return;
       const msg = e.data;
